adding unit test and shared data

--- a/Sample_UGS_CloudCode/Sample_UGS_CloudCode.csproj
+++ b/Sample_UGS_CloudCode/Sample_UGS_CloudCode.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Com.Unity.Services.CloudCode.Core" Version="0.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
+    </ItemGroup>
+
 </Project>
