--- a/Sample_UGS_CloudCode/Sample_UGS_CloudCode.csproj
+++ b/Sample_UGS_CloudCode/Sample_UGS_CloudCode.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Com.Unity.Services.CloudCode.Apis" Version="0.0.3" />
       <PackageReference Include="Com.Unity.Services.CloudCode.Core" Version="0.0.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
